<resources>
    <string name="app_name">TechnicStoreApp</string>
    <string name="title_home">Главная</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_cart">Корзина</string>
    <string name="title_profile">Профиль</string>
    <string name="search_in_catalog">Поиск в каталоге</string>
    <string name="news_it">📰Новости в мире западного IT</string>
    <string name="popular">🔥Пользуются спросом</string>
    <string name="title">Title</string>
    <string name="author">author</string>
    <string name="add_to_cart">В корзину за %1$s р.</string>
    <string name="order">Заказать на общую сумму: %1$s р.</string>
    <string name="points_count">Ваше количество баллов:</string>
    <string name="favourites">Избранное</string>
    <string name="order_history">История заказов</string>
    <string name="entrance">Вход</string>
    <string name="login">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="hilt_to_entrance">Войдите, чтобы продолжить</string>
    <string name="log_in">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="register">Зарегистрироваться!</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="name">Имя и фамилия</string>
    <string name="email">Электронный адрес</string>
    <string name="phone_number">Номер телефона</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="error_to_password">"Ваш пароль должен содержать заглавные и строчные буквы английского алфавита, цифры или знак _, а также должен быть более 8 символов"</string>
    <string name="incorrect_number_or_password">Неверный логин или пароль!</string>
    <string name="error_to_date">Дата должна быть в формате ДД.ММ.ГГГГ</string>
    <string name="error_to_number">Неверный номер</string>
    <string name="error_to_email">Неверный формат электронной почты</string>
    <string name="error_to_number_is_occupied">Номер телефона уже занят!</string>
    <string name="hello">Привет, %1$s!</string>
    <string name="info_about_user">Информация о пользователе</string>
    <string name="number_phone">Номер телефона: </string>
    <string name="email_for_user_page">Электронная почта:</string>
    <string name="date_of_birth_for_user_page">Дата рождения:</string>
    <string name="log_out_account">Выйти с аккаунта</string>
    <string name="remove_account">Удалить аккаунт</string>
    <string name="discount_hilt">Баллы начисляются в размере 5% от заказа</string>
    <string name="come_to_profile">Перейти к профилю!</string>
    <string name="auth_success">Вы успешно зарегистрированы!</string>
    <string name="use_discount">Использовать баллы:</string>
    <string name="all">Все</string>
    <string name="total_discount">Всего: %1$s</string>
    <string name="cart_empty">Ваша корзина пуста!</string>
    <string name="come_to_catalog">Перейти в каталог</string>
    <string name="create_order">Оформление заказа</string>
    <string name="technic">Техника:</string>
    <string name="enter_address">Заказ будет доставлять на:</string>
    <string name="your_address">Ваш адрес</string>
    <string name="payment_method">Способ оплаты:</string>
    <string name="cash">Наличные</string>
    <string name="card">Картой курьеру</string>
    <string name="add_order">Сделать заказ</string>
    <string name="total_sum_order">Общая сумма заказа:</string>
    <string name="set_price">%1$s р.</string>
    <string name="back">Назад</string>
    <string name="to_cart">В корзину</string>
    <string name="to_cart_access">Ваша техника успешно добавлена в корзину!</string>
    <string name="order_access">Заказ успешно выполнен успешно!</string>
    <string name="log_out">Вы уверены, что хотите выйти?</string>
    <string name="delete_account">Вы уверены, что хотите удалить аккаунт?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="product_in_cart">Этот товар уже в корзине!</string>
    <string name="back_to_cart">К корзине</string>
    <string name="to_profile">К профилю</string>
    <string name="discount_calc">10 баллов = 1р.</string>
    <string name="discount_error">Недостаточно баллов!</string>
    <string name="done">Готово</string>
    <string name="cancel">Отменить</string>
    <string name="me_have_account">У меня уже есть аккаунт</string>
    <string name="registr_not">Зарегистрироваться</string>
    <string name="hilt_auth">Для совершения покупки вам нужно авторизоваться!</string>
    <string name="auth">Авторизоваться</string>
    <string name="actual_address">Актуальный адрес:</string>
    <string name="history_order">История заказов</string>
    <string name="add_to_favourite">Добавить товар в избранное</string>
    <string name="remove_from_favourite">Удалить товар из избранных</string>
    <string name="favourite_empty">Вы еще ничего не добавили в избранное</string>
    <string name="history_empty">Вы еще не совершали заказов</string>
    <string name="no_internet">Подсоединение к интернету отсутствует!</string>
    <string name="retry">Повторить</string>
    <string name="not_enough_points">Недостаточно баллов!</string>
    <string name="discount_applied">Скидка применена!</string>
    <string name="discount_cancelled">Скидка отменена!</string>
    <string name="sorting">Сортировка</string>
    <string name="success_order_title">Успешная покупка</string>
    <string name="success_order_description">Покупка успешно завершена</string>
    <string-array name="sort">
        <item>Сортировка: по умолчанию</item>
        <item>Сортировка: по цене(убывание)</item>
        <item>Сортировка: по цене(возрастание)</item>
    </string-array>
</resources>