<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_white">

    <View
        android:id="@+id/order_name_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/back_order"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/order_name_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <TextView
        android:id="@+id/order_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_order"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/technic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/technic"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline52" />

    <TextView
        android:id="@+id/enter_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_address"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline53" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/technic" />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/style_edittext_order"
        android:hint="@string/your_address"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_address"
        tools:ignore="RtlSymmetry,TextFields" />

    <ProgressBar
        android:id="@+id/progress_bar_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_700"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/payment_method"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <RadioGroup
        android:id="@+id/payment_method_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/control_switch_background_border"
        android:checkedButton="@+id/cash"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_method">

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/control_switch_background_selector_middle"
            android:button="@null"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/cash"
            android:textColor="@drawable/control_switch_color_selector" />

        <RadioButton
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/control_switch_background_selector"
            android:button="@null"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/card"
            android:textColor="@drawable/control_switch_color_selector" />
    </RadioGroup>

    <View
        android:id="@+id/total_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline56" />

    <TextView
        android:id="@+id/total_count_text"
        android:layout_width="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_height="wrap_content"
        android:text="@string/total_sum_order"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline56" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="15000 р."
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline56" />

    <Button
        android:id="@+id/add_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/add_order"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/discount_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/total_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/use_discount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:gravity="center"
        android:text="@string/use_discount"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/discount_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/discount_view" />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/discount_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/discount_view" />

    <EditText
        android:id="@+id/discount_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/style_login_edittext"
        android:hint="@string/total_discount"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/discount_view"
        app:layout_constraintEnd_toStartOf="@id/done"
        app:layout_constraintStart_toEndOf="@id/use_discount"
        app:layout_constraintTop_toTopOf="@id/discount_view"
        tools:ignore="RtlSymmetry,TextFields" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="94dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/order_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="technic, order_recycler, enter_address, address, payment_method, payment_method_group, discount_view, use_discount, discount_points, done, total_count, total_count_text, total_price, add_order" />

</androidx.constraintlayout.widget.ConstraintLayout>