<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.technicstoreapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_technicPageFragment"
            app:destination="@id/technicPageFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.technicstoreapp.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" >
        <action
            android:id="@+id/action_navigation_catalog_to_categoryPageFragment"
            app:destination="@id/categoryPageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_in_left" />
        <action
            android:id="@+id/action_navigation_catalog_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_catalog_to_technicPageFragment"
            app:destination="@id/technicPageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.technicstoreapp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_technicPageFragment"
            app:destination="@id/technicPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.technicstoreapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        tools:layout="@layout/fragment_technic_page"
        android:id="@+id/technicPageFragment"
        android:name="com.example.technicstoreapp.ui.technic_page.TechnicPageFragment"
        android:label="TechnicPageFragment" >
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/categoryPageFragment"
        android:name="com.example.technicstoreapp.ui.catalog.category_page.CategoryPageFragment"
        android:label="fragment_category_page"
        tools:layout="@layout/fragment_category_page" >
        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue="Телефоны" />
        <action
            android:id="@+id/action_categoryPageFragment_to_technicPageFragment"
            app:destination="@id/technicPageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_search"
        android:id="@+id/searchFragment"
        android:name="com.example.technicstoreapp.ui.search.SearchFragment"
        android:label="SearchFragment" />
</navigation>